--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
 .navbar-default {
     background-image: linear-gradient(to bottom,#EE81A8 0,#EE81A8 100%) !important;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: 100% 0;
+}
