--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
 }
@@ -27,9 +23,36 @@
     background-image: linear-gradient(to bottom,#EE81A8 0,#EE81A8 100%) !important;
 }
 
-.card-img-top {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    object-position: 100% 0;
+/* Index page title */
+.index-header {
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
 }
+
+/* Styling cards */
+.queen-name {
+  font-family: 'Abril Fatface', cursive;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+  color: #EE81A8;
+}
+
+.season {
+  font-family: 'Abril Fatface', cursive;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 0px;
+}
+
+.card-body {
+  padding: 0px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: 100% 0;
+}
+
