--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,7 @@ a.dropdown-item:hover {
 
 .card-img-top {
   width: 100%;
-  height: 200px;
+  height: 100%;
   object-fit: cover;
   object-position: 100% 0;
 }
