--- a/src/App.css
+++ b/src/App.css
@@ -165,3 +165,75 @@ a.dropdown-item:hover {
 h3 {
   color: #EE81A8;
 }
+
+/* Landing page */
+.landingpage {
+  padding-top: 100px;
+  background-color: #EE81A8;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+h7 {
+  font-size: 80px;
+  font-family: 'Pacifico', cursive;
+  color: #ffffff;
+}
+
+input {
+  text-align: center;
+  border-radius: 30px;
+}
+
+.landingpageimg {
+  width: 400px;
+}
+
+.btn-sample {
+  color: #EE81A8;
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
+  border-radius: 30px;
+  width: 330px;
+  margin-top: 5px;
+}
+
+.btn-sample:hover,
+.btn-sample:focus,
+.btn-sample:active,
+.btn-sample.active,
+.open .dropdown-toggle.btn-sample {
+  color: #EE81A8;
+  background-color: #FFA8C6;
+  border-color: #FFFFFF;
+}
+
+.btn-sample:active,
+.btn-sample.active,
+.open .dropdown-toggle.btn-sample {
+  background-image: none;
+}
+
+.btn-sample.disabled,
+.btn-sample[disabled],
+fieldset[disabled] .btn-sample,
+.btn-sample.disabled:hover,
+.btn-sample[disabled]:hover,
+fieldset[disabled] .btn-sample:hover,
+.btn-sample.disabled:focus,
+.btn-sample[disabled]:focus,
+fieldset[disabled] .btn-sample:focus,
+.btn-sample.disabled:active,
+.btn-sample[disabled]:active,
+fieldset[disabled] .btn-sample:active,
+.btn-sample.disabled.active,
+.btn-sample[disabled].active,
+fieldset[disabled] .btn-sample.active {
+  background-color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+
+.btn-sample .badge {
+  color: #FFFFFF;
+  background-color: #EE81A8;
+}
